message EntereRoomResultProto{
	required int32 roomId=1;
	required int32 seat=2;
}